Correctif contrast suite soutenance

--- a/style.css
+++ b/style.css
@@ -828,7 +828,7 @@ h4 {
 }
 
 .bg-dots-bg {
-    background-image: url("img/agence-la-panthere.jpg");
+    background-image: url("img/dots-bg.png");
 }
 
 .bg-banniere {
@@ -1105,10 +1105,10 @@ h4 {
 
 .bold {
     font-weight: bold;
-    font-size: 20px;
+    font-size: 17px;
 }
 
-.invite {
-    font-size: 38px;
-    color: #f3976c !important;
+.black {
+    color: #000000 !important;
+    font-size: 20px;
 }
